--- a/index.html
+++ b/index.html
@@ -15,10 +15,19 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 <link rel="stylesheet" href="styles.css">
 <title>Aidan's Portfolio</title>
-
+    
 </head>
 <body>
-
-
+    <img src="images/home-title.png" id="home-title">
+    <div class="sidenav">
+        <a href="#">1</a>
+        <a href="#">2</a>
+        <a href="#">3</a>
+    </div>
+    
+    <div class="main">
+        <br><br>
+        <p style="font-size: 25px;">Welcome to my portfolio! Use the links on the right to access my About, Coding Projects, and Experience Timeline pages. I hope you enjoy what you see.</p>
+    </div>
 </body>
 </html>
