--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
 <body onload="loadPage()">
     <div id="loader"></div>
     <div id="main" style="display: none;" class="animate-bottom">
-        <img src="images/home-title.png" id="home-title">
+        <a href="index.html"><img src="images/home-title.png" id="home-title"></a>
         <div>
             <br><br>
             <p style="text-align: center; font-size: 20px;">Welcome to my portfolio! Use the links below to access the content within this site. Enjoy!</p>
         </div>
         <div style="text-align: center; padding-right: 200px; padding-left: 200px;">
-            <div class="jumbotron" style="background-color: #56d181;">
+            <div class="jumbotron" style="background-color: #049b39;">
                 <h1><a href="bio-exp.html" style="font-family: link-font;">Bio and Experiences</a></h1>
                 <p>A bit about myself and the experiences, courses, etc. that I've taken throughout high school.</p>
             </div>
-            <div class="jumbotron" style="background-color: #56d181;">
+            <div class="jumbotron" style="background-color: #049b39;">
                 <h1><a href="projects.html" style="font-family: link-font;">Coding Projects</a></h1>
                 <p>A showcase of some of the various programming projects I've worked on throughout high school.</p>
             </div>
