--- a/projects.html
+++ b/projects.html
@@ -24,20 +24,28 @@
             $("#accordion").accordion({
                 collapsible:true,
                 heightStyle: "content",
-                icons: { "header": "ui-icon-plus", "activeHeader": "ui-icon-minus" }
+                active: "none"
             });
         })
     </script>
+    <style>
+        #accordion {
+            padding-left: 150px;
+            padding-right: 150px;
+        }
+    </style>
 <link rel="stylesheet" href="styles.css">
 <title>Aidan's Portfolio - Projects</title>
 </head>
 <body onload="loadPage()">
     <div id="loader"></div>
     <div id="main" style="display: none;" class="animate-bottom">
-        <img src="images/home-title.png" id="home-title">
+        <a href="index.html"><img src="images/home-title.png" id="home-title"></a>
+        
         <div class="topnav" id="topnav">
+            <a href="projects.html">Coding Projects</a>
+            <a href="index.html">Home</a>
             <a href="bio-exp.html">Bio and Experiences</a>
-            <a href="index.html">Home</a><a href="projects.html">Coding Projects</a>
             <a href="javascript:void(0);" class="icon" onclick="topNav()"><i class="fa fa-bars"></i></a>
         </div>
         <div class="sidenav">
