--- a/index.html
+++ b/index.html
@@ -17,28 +17,34 @@
     <script src="script.js"></script>
 <link rel="stylesheet" href="styles.css">
 <title>Aidan's Portfolio - Home</title>
-    
+    <style>
+        #home-title-main {
+            width: 50%;
+            margin-left: auto;
+            margin-right: auto;
+            display: block;
+}
+    </style>
 </head>
 <body onload="loadPage()">
     <div id="loader"></div>
     <div id="main" style="display: none;" class="animate-bottom">
-        <a href="index.html"><img src="images/home-title.png" id="home-title"></a>
+        <a href="index.html"><img src="images/home-title.png" id="home-title-main"></a>
         <div>
             <br><br>
-            <p style="text-align: center; font-size: 20px;">Welcome to my portfolio! Use the links below to access the content within this site. Enjoy!</p>
+            <p style="text-align: center; font-size: 25px;">Welcome to my portfolio! Use the links below to access the content within this site. Enjoy!</p>
         </div>
         <div style="text-align: center; padding-right: 200px; padding-left: 200px;">
             <div class="jumbotron" style="background-color: #049b39;">
-                <h1><a href="bio-exp.html" style="font-family: link-font;">Bio and Experiences</a></h1>
+                <h1><a href="bio-exp.html" style="font-family: link-font; font-size: 20px;">Bio and Experiences</a></h1>
                 <p>A bit about myself and the experiences, courses, etc. that I've taken throughout high school.</p>
             </div>
             <div class="jumbotron" style="background-color: #049b39;">
-                <h1><a href="projects.html" style="font-family: link-font;">Coding Projects</a></h1>
+                <h1><a href="projects.html" style="font-family: link-font; font-size: 20px;">Coding Projects</a></h1>
                 <p>A showcase of some of the various programming projects I've worked on throughout high school.</p>
             </div>
         </div>
         <!-- <iframe src="https://ytmp3.cc"></iframe> -->
-        
     </div>
 </body>
 </html>
