--- a/index.html
+++ b/index.html
@@ -41,10 +41,9 @@
             </div>
             <div class="jumbotron" style="background-color: #049b39;">
                 <h1><a href="projects.html" style="font-family: link-font; font-size: 20px;">Coding Projects</a></h1>
-                <p>A showcase of some of the various programming projects I've worked on throughout high school.</p>
+                <p>A showcase of some of the various programming projects I've worked on throughout high school and during my time at UW Bothell.</p>
             </div>
         </div>
-        <!-- <iframe src="https://ytmp3.cc"></iframe> -->
     </div>
 </body>
 </html>
